--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
     "deck.gl": "^8.9.33",
+    "eslint-plugin-jsdoc": "^48.0.2",
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
