Add map and visualization controls

--- a/package.json
+++ b/package.json
@@ -15,8 +15,13 @@
     "@deck.gl/layers": "^8.9.33",
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.15.4",
+    "@mui/material": "^5.15.4",
     "deck.gl": "^8.9.33",
     "eslint-plugin-jsdoc": "^48.0.2",
+    "mapbox-gl": "^3.0.1",
+    "maplibre-gl": "^3.6.2",
+    "mui-color-input": "^2.0.1",
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
