--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,34 +2,24 @@
   "root": true,
   "env": { "browser": true, "es2020": true },
   "extends": [
-      "eslint:recommended",
-      "plugin:react/recommended",
-      "plugin:react/jsx-runtime",
-      "next"
+    "eslint:recommended",
+    "plugin:react/recommended",
+    "plugin:react/jsx-runtime",
+    "next"
   ],
   "ignorePatterns": ["dist", ".eslintrc.cjs"],
   "parserOptions": { "ecmaVersion": "latest", "sourceType": "module" },
   "settings": { "react": { "version": "18.2" } },
   "plugins": ["react-refresh", "jsdoc"],
   "rules": {
-      "indent": [
-          "error",
-          2,
-          { "SwitchCase": 1 }
-      ],
-      "quotes": [
-          "error",
-          "single"
-      ],
-      "semi": [
-          "error",
-          "always"
-      ],
-      "react-refresh/only-export-components": [
-          "warn",
-          { "allowConstantExport": true }
-      ],
-      "react/prop-types": 0,
-      "react/jsx-no-target-blank": 0
+    "indent": ["error", 2, { "SwitchCase": 1 }],
+    "quotes": ["error", "single"],
+    "semi": ["error", "always"],
+    "react-refresh/only-export-components": [
+      "warn",
+      { "allowConstantExport": true }
+    ],
+    "react/prop-types": 0,
+    "react/jsx-no-target-blank": 0
   }
 }
